--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -96,7 +96,7 @@
 
             <!--LAST PROJECT: DO NOT LET OTHER PROJECTS FOLLOW THIS ONE-->
             <div id="project-last" class="project">
-                <a href="https://github.com/CalebUmass/static-web-showing">
+                <a href="https://github.com/CalebUmass/static-web-showing" target="_blank">
                     <div class="overlay">
                         <div class="text">
                             <h3>GitHub</h3>
