--- a/Projects-Landing-Page-main-copy/index.html
+++ b/Projects-Landing-Page-main-copy/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="homepage.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--Links to fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
@@ -13,31 +14,16 @@
 
 <body>
     <div class="container" id="home">
-        <div id="image"></div>
-        <button id = "openbutton" class="openbtn" onclick="openNav()">&#9776;</button>
-
-        <script>
-            /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
-            function openNav() {
-                document.getElementById("mySidebar").style.width = "300px";
-                document.getElementById("openbutton").style.opacity = 0;
-            }
-
-            /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-            function closeNav() {
-                document.getElementById("mySidebar").style.width = "0";
-                document.getElementById("openbutton").style.opacity = 1;
-            }
-        </script>
+        <div id="image"></div> <!--This holds the background image-->
 
         <div id="pagebody">
             <div class="headings">
-                <h2 id="subheading">Poggio Civitate</h2>
-                <h1 id="heading">Data Science Projects</h1>
+                <h2 id="subheading">Poggio Civitate</h2> <!--Subheading-->
+                <h1 id="heading">Data Science Projects</h1> <!--Heading-->
             </div>
             <div class="buttons">
-                <a href="projects-page.html">
-                    <button id="projbutton">EXPLORE</button>
+                <a href="projects-page.html"> <!--Links to projects-page.html-->
+                    <button id="projbutton">EXPLORE</button> <!--Button that takes you to projects-page.html-->
                 </a>
             </div>
         </div>
