--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -228,143 +228,143 @@
             <h2 class="display-6 fw-bold py-5" id="heading">Gallery</h2>
             <!--GALLERY-->
             <div class="row mb-5 flex-wrap justify-content-center" id="galleryRow">
-                <a class="col gx-4 image-item" id="img1" href="media/2022/MM-22-10-1.png" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img1" href="../media/2022/MM-22-10-1.png" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Alphabet, 2022</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img2" href="media/2022/MM-22-9-1.png" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img2" href="../media/2022/MM-22-9-1.png" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Misc Drawing, 2022</p>
                 </a>
 
 
                 <a class="col gx-4 image-item" id="img3"
-                    href="media/2022/Floreak Cheese Making Illustration-1.png" data-toggle="lightbox"
+                    href="../media/2022/Floreak Cheese Making Illustration-1.png" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Cheese Making Illustration, 2022</p>
                 </a>
-                <a class="col gx-4 image-item" id="img4" href="media/2022/alphabet rough sketch-1.png"
+                <a class="col gx-4 image-item" id="img4" href="../media/2022/alphabet rough sketch-1.png"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Alphabet Rough Sketch, 2022</p>
                 </a>
 
 
-                <a class="col gx-4 image-item" id="img5" href="media/2018/Roof Reconstruction C.JPG"
+                <a class="col gx-4 image-item" id="img5" href="../media/2018/Roof Reconstruction C.JPG"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Roof Reconstruction, 2018</p>
                 </a>
 
 
-                <a class="col gx-4 image-item" id="img6" href="media/2018/Pathway Illustration.jpg"
+                <a class="col gx-4 image-item" id="img6" href="../media/2018/Pathway Illustration.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Pathway, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img7" href="media/2018/MM2018 llustration Weaving.jpg"
+                <a class="col gx-4 image-item" id="img7" href="../media/2018/MM2018 llustration Weaving.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Weaving, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img8" href="media/2018/MM2018 Illustration Women.jpg"
+                <a class="col gx-4 image-item" id="img8" href="../media/2018/MM2018 Illustration Women.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Women, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img9" href="media/2018/MM2018 Illustration Loom.jpg"
+                <a class="col gx-4 image-item" id="img9" href="../media/2018/MM2018 Illustration Loom.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Loom, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img10" href="media/2018/MM2018 Illustration Kilns.jpg"
+                <a class="col gx-4 image-item" id="img10" href="../media/2018/MM2018 Illustration Kilns.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Kilns, 2018</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img11"
-                    href="media/2018/MM2018 Illustration Infill of Well.jpg" data-toggle="lightbox"
+                    href="../media/2018/MM2018 Illustration Infill of Well.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Infill of Well, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img12" href="media/2018/MM2018 Illustration EPOC 4 2.jpg"
+                <a class="col gx-4 image-item" id="img12" href="../media/2018/MM2018 Illustration EPOC 4 2.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>EPOC 4, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img13" href="media/2018/MM2018 Illustration EPOC 4.jpg"
+                <a class="col gx-4 image-item" id="img13" href="../media/2018/MM2018 Illustration EPOC 4.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>EPOC 4, 2018</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img14"
-                    href="media/2018/MM2018 Illustration Domestic Architecture.jpg" data-toggle="lightbox"
+                    href="../media/2018/MM2018 Illustration Domestic Architecture.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Domestic Architecture, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img15" href="media/2018/Kiln Reconstruction.JPG"
+                <a class="col gx-4 image-item" id="img15" href="../media/2018/Kiln Reconstruction.JPG"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Kilns, 2018</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img16" href="media/2015/Wolf Drawing.jpg"
+                <a class="col gx-4 image-item" id="img16" href="../media/2015/Wolf Drawing.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Wolf, 2015</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img17"
-                    href="media/1995/Section - Orientalizing and Archaic Phases, 1995.jpg" data-toggle="lightbox"
+                    href="../media/1995/Section - Orientalizing and Archaic Phases, 1995.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Orientalizing and Archaic Phases, 1995</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img18"
-                    href="media/1995/Reconstruction Upper Building, 1995.jpg" data-toggle="lightbox"
+                    href="../media/1995/Reconstruction Upper Building, 1995.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Upper Building, 1995</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img19" href="media/1994/MM 94-06.jpg" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img19" href="../media/1994/MM 94-06.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Structure, 1994</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img20" href="media/1994/MM 94-04.jpg" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img20" href="../media/1994/MM 94-04.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Structure Roof, 1994</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img21" href="media/1994/MM 94-02.jpg" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img21" href="../media/1994/MM 94-02.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Antefix, 1994</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img22" href="media/1994/MM 94-01.jpg" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img22" href="../media/1994/MM 94-01.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Antefix, 1994</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img23"
-                    href="media/1989/Reconstructed Section 1 S.E. Building, 1989.jpg" data-toggle="lightbox"
+                    href="../media/1989/Reconstructed Section 1 S.E. Building, 1989.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Southeast Building, 1989</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img24"
-                    href="media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989.jpg"
+                    href="../media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Southeast Building Roof, 1989</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img25"
-                    href="media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989 (2).jpg"
+                    href="../media/1989/Reconstructed Roof Elements S.E. Building, Version 2 - 1989 (2).jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Southeast Building Roof, 1989</p>
                 </a>
 
                 <a class="col gx-4 image-item" id="img26"
-                    href="media/1989/Reconstructed Elevation S.E. Building, 1989.jpg" data-toggle="lightbox"
+                    href="../media/1989/Reconstructed Elevation S.E. Building, 1989.jpg" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Southeast Building, 1989</p>
                 </a>
