--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -94,7 +94,16 @@
         <div id="row2" class="projectspage"> 
 
             <!--PROJECT 4-->
-            <a href="" id="project-4" class="project"></a> <!--Empty projects as placeholders-->
+             <div id="project-4" class="project">
+                <a href="../Lightbox-Gallery/index.html">
+                    <div class="overlay`">
+                        <div class="text">
+                            <h3>Lightbox Gallery</h3>
+                            <i>Created by Malie Geery</i><br><br><b></b>FOR YOU TO FILL OUT<br><br>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
             <!--PROJECT 5-->
             <a href="" id="project-4" class="project"></a>
