--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -228,12 +228,12 @@
             <h2 class="display-6 fw-bold py-5" id="heading">Gallery</h2>
             <!--GALLERY-->
             <div class="row mb-5 flex-wrap justify-content-center" id="galleryRow">
-                <a class="col gx-4 image-item" id="img1" href="../media/2022/MM-22-10-1.png" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img1" href="media/2022/MM-22-10-1.png" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Alphabet, 2022</p>
                 </a>
 
-                <a class="col gx-4 image-item" id="img2" href="../media/2022/MM-22-9-1.png" data-toggle="lightbox"
+                <a class="col gx-4 image-item" id="img2" href="media/2022/MM-22-9-1.png" data-toggle="lightbox"
                     data-gallery="photo_gallery">
                     <p>Misc Drawing, 2022</p>
                 </a>
