--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -23,6 +23,7 @@
             <a href="https://earth.google.com/web/@43.1581231,11.3908394,380a,2100d,35y,0h,45t,0r" target="_blank">Map</a>
             <a href="../trench-book-reader/public/index.html">Trenchbook Reader</a>
             <a href="../projected-coordinates-project-copy/converter.html">Coordinate Converter</a>
+            <a href="../Lightbox-Gallery/index.html">Lightbox Gallery</a>
             <!--ADD NEW PROJECTS ABOVE THIS COMMENT-->
         </div>
 
@@ -83,7 +84,7 @@
                     <div class="overlay">
                         <div class="text">
                             <h3>Trench Book Reader</h3>
-                            <i>Created by Caleb Richards</i><br><br><b></b>Read and explore trench books. <br><br>
+                            <i>Created by Caleb Richards</i><br><br><b></b>Read and explore trench books.<br><br>
                         </div>
                     </div>
                 </a>
@@ -96,10 +97,10 @@
             <!--PROJECT 4-->
              <div id="project-4" class="project">
                 <a href="../Lightbox-Gallery/index.html">
-                    <div class="overlay`">
+                    <div class="overlay">
                         <div class="text">
                             <h3>Lightbox Gallery</h3>
-                            <i>Created by Malie Geery</i><br><br><b></b>FOR YOU TO FILL OUT<br><br>
+                            <i>Created by Malie Geery</i><br><br><b>Explore and search artwork.</b><br><br>
                         </div>
                     </div>
                 </a>
