--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -358,7 +358,7 @@
                 </a>
 
                 <a class="col gx-4 image-item" id="img25"
-                    href="/static-web-showing/Lightbox-Gallery/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989(2).jpg"
+                    href="/static-web-showing/Lightbox-Gallery/media/1989/ReconstructedRoofElementsS.E.Building,Version2-1989-2.jpg"
                     data-toggle="lightbox" data-gallery="photo_gallery">
                     <p>Southeast Building Roof, 1989</p>
                 </a>
