--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -368,6 +368,15 @@
                     data-gallery="photo_gallery">
                     <p>Southeast Building, 1989</p>
                 </a>
+
+                <!--ADD NEW PROJECTS ABOVE THIS COMMENT-->
+                
+                <!--FORMAT FOR ADDING PROJECT: 
+                <a class="col gx-4 image-item" id="img##"
+                href="YOUR URL HERE" data-toggle="lightbox" data-gallery="photo-gallery">
+                    <p>SHORT DESCRIPTION, YEAR</p>
+                </a>-->
+                
             </div>
 
             <p id="noResultsMessage">
