--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="container-fluid">
 
-        <!--NAVBAR-->
+        <!--NAVBAR CODE (top of the screen)-->
         <nav class="navbar navbar-light" id="navigationBar">
 
             <div class="container-fluid" id="navigation">
