--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -20,12 +20,14 @@
 
                 <!--HOME BUTTON-->
 
-                <a href="../Projects-Landing-Page-main-copy/projects-page.html" id="homeButton"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="26"
-                        fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
-                    </svg>Back to All Projects</a>
-
+                <a href="../Projects-Landing-Page-main-copy/projects-page.html" id="homeButton"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28"
+                        fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                        <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+                    </svg>
+                </a>
+                
                 <!--EXPLANATION BUTTON-->
                 <!-- Button trigger modal -->
                 <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="helpButton">
