--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -143,7 +143,7 @@
                                         <div class="accordion-body" id="accordion-body-2">
                                             <form>
                                                 <input class="form-control me-2 searchPills" type="search"
-                                                    placeholder="Search" aria-label="Search" id="searchSearchbyYear">
+                                                    placeholder="Search Filters" aria-label="Search" id="searchSearchbyYear">
                                             </form>
                                             <button class="pill pillYear" type="button" id="Unknown">Unknown</button>
                                         </div>
@@ -161,7 +161,7 @@
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body" id="accordion-body-1">
                                             <input class="form-control me-2 searchPills" type="search"
-                                                placeholder="Search" aria-label="Search" id="searchSearchbyTrench">
+                                                placeholder="Search Filters" aria-label="Search" id="searchSearchbyTrench">
                                             <!--<button class="pill pillTrench" type="button" id="ETAP">ETAP</button>
                                         <button class="pill pillTrench" type="button" id="WTAP">WTAP</button>
                                         <button class="pill pillTrench" type="button" id="NTAP">NTAP</button>-->
