--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <main class="container-fluid">
+    <main class="container-fluid"> <!--sets width to 100%-->
 
         <!--NAVBAR CODE (top of the screen)-->
         <nav class="navbar navbar-light" id="navigationBar">
 
             <div class="container-fluid" id="navigation">
 
-                <!--HOME BUTTON-->
+                <!--HOME BUTTON: Links back to the main webpage-->
 
                 <a href="../Projects-Landing-Page-main-copy/projects-page.html" id="homeButton"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28"
                         fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
@@ -27,11 +27,15 @@
                         <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
                     </svg>
                 </a>
-                
-                <!--EXPLANATION BUTTON-->
-                <!-- Button trigger modal -->
-                <div id="navbarButtons" class="ms-auto">
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="helpButton">
+            <!-------------------------------------------------------------------------------------------------------------------------->
+
+                <div id="navbarButtons" class="ms-auto"> <!--Class ms-auto aligns everything in the navbar (except for the home button) to the right side of the navbar-->
+            <!-------------------------------------------------------------------------------------------------------------------------->
+       
+                    <!--EXPLANATION BUTTON--><!--This section holds the button + the explanation for how to use the website-->
+                    <!-- Button trigger modal --> <!--This contains the button that triggers the bootstrap modal to appear on click-->
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="helpButton"> <!--Data toggles and targets are from bootstrap modal code-->
+                        <!--The button information and sizing is contained within the svg tag-->
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-question-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
@@ -40,17 +44,17 @@
                         </svg>
                     </button>
 
-                    <!-- Modal -->
+                    <!-- Modal --> <!--This is what appears when the button is clicked-->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
+                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"> <!--all tags are bootstrap formatting-->
+                        <div class="modal-dialog"> <!--bootstrap formatting-->
+                            <div class="modal-content"> <!--bootstrap formatting-->
+                                <div class="modal-header"> <!--bootstrap formatting: this is the header of the modal-->
                                     <h1 class="modal-title fs-5" id="staticBackdropLabel">Using this Website</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
+                                        aria-label="Close"></button> <!--bs-dismiss, btn-close, and Close all control the X button to make it hide the modal on click-->
                                 </div>
-                                <div class="modal-body">
+                                <div class="modal-body"> <!--Body text of the modal-->
                                     To navigate this website, there are a few tools you can utilize to find images
                                     quicker!</br>
                                     You can use <b><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -87,10 +91,10 @@
                             </div>
                         </div>
                     </div>
-
+                <!-------------------------------------------------------------------------------------------------------------------------->
                     <!--SORT FUNCTION BAR-->
                     <div class="sort">
-                        <div class="nav-item dropdown px-2" id="sortBar">
+                        <div class="nav-item dropdown px-2" id="sortBar"> <!--The class tags are all Bootstrap formatting-->
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
