--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -34,9 +34,8 @@
        
                     <!--EXPLANATION BUTTON--><!--This section holds the button + the explanation for how to use the website-->
                     <!-- Button trigger modal --> <!--This contains the button that triggers the bootstrap modal to appear on click-->
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="helpButton"> <!--Data toggles and targets are from bootstrap modal code-->
-                        <!--The button information and sizing is contained within the svg tag-->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="helpButton">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="28" fill="currentColor"
                             class="bi bi-question-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                             <path
