--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -21,7 +21,7 @@
 
                 <!--HOME BUTTON-->
 
-                <a href="#" id="homeButton">
+                <a href="../Projects-Landing-Page-main-copy/projects-page.html" id="homeButton">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                         class="bi bi-house" viewBox="0 0 20 20">
                         <path
