Update projects-page.html for ocSearch
I'm sorry if I broke something.

--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -26,6 +26,7 @@
             <a href="../trench-book-reader/public/index.html">Trenchbook Reader</a>
             <a href="../projected-coordinates-project-copy/converter.html">Coordinate Converter</a>
             <a href="../Lightbox-Gallery/index.html">Lightbox Gallery</a>
+            <a href="../openContextReader/ocSearch.html">Open Context Search</a>
             <!--ADD NEW PROJECTS ABOVE THIS COMMENT-->
         </div>
 
@@ -109,7 +110,16 @@
             </div>
 
             <!--PROJECT 5-->
-            <a href="" id="project-5" class="project"></a>
+            <div href="" id="project-5" class="project">
+                <a href="../openContextReader/ocSearch.html">
+                    <div class="overlay">
+                        <div class="text">
+                            <h3>Open Context Filtering</h3>
+                            <i>Created by Ai Mei Zhang</i><br><br><b>Search for artifacts with ease.</b><br><br>
+                        </div>
+                    </div>               
+                </a>
+            </div>
 
             <!--LAST PROJECT: DO NOT LET OTHER PROJECTS FOLLOW THIS ONE--> <!--This links to the main GitHub page and should always be last-->
             <div id="project-last" class="project">
