--- a/Projects-Landing-Page-main-copy/index.html
+++ b/Projects-Landing-Page-main-copy/index.html
@@ -7,6 +7,7 @@
     <!--Links to fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
         rel="stylesheet">
