--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -155,8 +155,7 @@
                                                 <input class="form-control me-2 searchPills" type="search"
                                                     placeholder="Search" aria-label="Search" id="searchSearchbyYear">
                                             </form>
-                                            <!--All the pills created in the Javascript will appear here. We have created the Unknown pill manually-->
-                                            <button class="pill pillYear" type="button" id="Unknown">Unknown</button>
+                                            <!--All the pills created in the Javascript will appear here-->
                                         </div>
                                     </div>
                                 </div>
