--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -115,7 +115,7 @@
 
       <!-- Placeholder Project (optional, can be removed) -->
       <div id="project-6" class="project">
-        <a href="#">
+        <a href="../3d-viewer/index.html">
           <div class="overlay">
             <div class="text">
               <h3>3D Viewer</h3>
