fixes with ease

--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -50,9 +50,9 @@
         <div class="overlay">
           <div class="text">
             <h3>How to Use this Website</h3>
-            Hover over boxes to see a description of the project.<br><br>
-            Click on boxes to go to the project.<br><br>
-            Click the ☰ icon at the top to open the project list view.
+            Hover over boxes to see a description of the project with ease.<br><br>
+            Click on boxes to go to the project with ease.<br><br>
+            Click the ☰ icon at the top to open the project list view with ease.
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
             <div class="text">
               <h3>Coordinates Converter</h3>
               <i>Created by Malie Geery</i><br><br>
-              Convert coordinates into WGS and EPSG.<br><br>
+              Convert coordinates into WGS and EPSG with ease.<br><br>
             </div>
           </div>
         </a>
@@ -77,7 +77,7 @@
             <div class="text">
               <h3>Trench Book Reader</h3>
               <i>Created by Caleb Richards</i><br><br>
-              Read and explore trench books.<br><br>
+              Read and explore trench books with ease.<br><br>
             </div>
           </div>
         </a>
@@ -94,7 +94,7 @@
             <div class="text">
               <h3>Lightbox Gallery</h3>
               <i>Created by Malie Geery</i><br><br>
-              Explore and search artwork.<br><br>
+              Explore and search artwork with ease.<br><br>
             </div>
           </div>
         </a>
@@ -162,7 +162,7 @@
         <div class="overlay">
           <div class="text">
             <h3>GitHub</h3>
-            View the raw code behind this website and all of the data science projects.
+            View the raw code behind this website and all of the data science projects with ease.
           </div>
         </div>
       </a>
