--- a/openContextReader/ocSearch.html
+++ b/openContextReader/ocSearch.html
@@ -767,7 +767,7 @@
         </form>
 
     <button onclick="openTab()" id="searchButton">Search</button>
-    <!-- <button id="resetButton">Back to Previous</button> -->
+    <button onclick="reset()"id="resetButton">Search Reset</button>
 
 </div>
 
